ISAICP-6159: Fix overlap comment on reply.

--- a/web/themes/joinup/scss/components/_comment.scss
+++ b/web/themes/joinup/scss/components/_comment.scss
@@ -37,7 +37,7 @@
       height: auto;
 
       &[src*="user_icon.png"] {
-        width: 80%;
+        width: 100%;
         margin-top: 12px;
       }
     }
@@ -71,6 +71,7 @@
 
 .comment-item__content {
   margin-bottom: -20px;
+  margin-right: 20px;
 }
 
 .comment-item__stats {
@@ -197,6 +198,8 @@
     padding-left: 40px;
     background: white;
     overflow: hidden;
+    z-index: 1;
+
 
     &::before {
       content: "";
@@ -206,8 +209,8 @@
       display: inline-block;
       width: 2px;
       background-color: $color-grey-bg;
-      height: 9999px;
-      z-index: 1;
+      height: 100%;
+      z-index: 2;
     }
 
     .comment-item {
